TEST_PROGRAMS/INVALID/jacob_errington/if-then-else.min
if x then

else

print "hi";

# forgot to write end

